# animation

./: CMakeLists.txt
assets/: model1.dae  model2A.dae
src/: animation.cpp  animation.h  bone.cpp  bone.h  cpu_animator.h  dual_gpu_animator.h  glitter.h  gpu_animator.h  keyframe.h  main.cpp  texture.h  transformation.cpp  transformation.h  utils.h  vao.h
src/shaders/: F_shader.glsl  V_cpu_shader.glsl  V_dual_shader.glsl  V_shader.glsl  scene_object_shader.h  shader.cpp  shader.h
